:lipstick: Style text highlight colour

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,3 +14,10 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+::selection {
+  background: #ffb7b7; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: #ffb7b7; /* Gecko Browsers */
+}
